feat: implement dataflow cdk artifacts (#65926)