@@ -19,25 +19,32 @@ java {
 
 application {
     mainClass = 'io.airbyte.integrations.destination.snowflake.SnowflakeDestinationKt'
-    applicationDefaultJvmArgs = ['-XX:+ExitOnOutOfMemoryError', '-XX:MaxRAMPercentage=75.0',
-                                 '-XX:NativeMemoryTracking=detail', '-XX:+UnlockDiagnosticVMOptions',
-                                 '-XX:GCLockerRetryAllocationCount=100',
+// enable when profiling
+    applicationDefaultJvmArgs = [
+            '-XX:+ExitOnOutOfMemoryError',
+            '-XX:MaxRAMPercentage=75.0',
+            '-XX:NativeMemoryTracking=detail',
+            '-XX:+UnlockDiagnosticVMOptions',
+            '-XX:GCLockerRetryAllocationCount=100',
+//            '-XX:NativeMemoryTracking=detail',
 //            '-Djava.rmi.server.hostname=localhost',
 //            '-Dcom.sun.management.jmxremote=true',
 //            '-Dcom.sun.management.jmxremote.port=6000',
 //            '-Dcom.sun.management.jmxremote.rmi.port=6000',
-//            '-Dcom.sun.management.jmxremote.local.only=false',
+//            '-Dcom.sun.management.jmxremote.local.only=false'
 //            '-Dcom.sun.management.jmxremote.authenticate=false',
-//            '-Dcom.sun.management.jmxremote.ssl=false'
+//            '-Dcom.sun.management.jmxremote.ssl=false',
     ]
 
 }
 
-//integrationTestJava {
-//    // This is needed to make the destination-snowflake tests succeed - https://github.com/snowflakedb/snowflake-jdbc/issues/589#issuecomment-983944767
-//    jvmArgs = ["--add-opens=java.base/java.nio=ALL-UNNAMED"]
-//}
-
 dependencies {
     implementation 'net.snowflake:snowflake-jdbc:3.26.1'
+
+    testImplementation "io.mockk:mockk:1.14.5"
+    testImplementation "org.junit.jupiter:junit-jupiter-api:5.13.4"
+    testImplementation "org.junit.jupiter:junit-jupiter:5.13.4"
+    testRuntimeOnly "org.junit.platform:junit-platform-engine:1.13.4"
+    testRuntimeOnly "org.junit.platform:junit-platform-launcher:1.13.4"
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.13.4"
 }
